Change the cursor above controls from pointer to default to avoid its constant flickering

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-switch/b-switch.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-switch/b-switch.scss
@@ -39,7 +39,7 @@
 .b-switch__options li {
 	font-size: 11px;
 	opacity: 0.4;
-	cursor: pointer;
+    cursor: default;
 }
 
 .b-switch__options li:hover {
